--- a/CreArte/Views/Inventario/AjusteEntrada.cshtml
+++ b/CreArte/Views/Inventario/AjusteEntrada.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <div class="mb-2">
-        <label asp-for="CANTIDAD" class="form-label"></label>
+        <label asp-for="CANTIDAD" class="form-label">Cantidad</label>
         <input asp-for="CANTIDAD" class="form-control" />
         <span asp-validation-for="CANTIDAD" class="text-danger"></span>
     </div>
