--- a/CreArte/Views/Login/CambiarContrasena.cshtml
+++ b/CreArte/Views/Login/CambiarContrasena.cshtml
@@ -1,10 +1,4 @@
-﻿@* 
-   Vista: Cambiar contraseña
-   - Mismo layout visual que Login: left-panel / right-panel / form-wrapper
-   - Funcional con TagHelpers + AntiForgery + Validaciones
-   - Comentado paso a paso (programador principiante)
-*@
-@model CreArte.ModelsPartial.CambiarContrasenaViewModel
+﻿@model CreArte.ModelsPartial.CambiarContrasenaViewModel
 @{
     ViewData["Title"] = "Cambiar contraseña";
     Layout = null; // Mantenemos sin layout, igual que tu Login
