--- a/CreArte/Views/Permisos/Create.cshtml
+++ b/CreArte/Views/Permisos/Create.cshtml
@@ -97,10 +97,10 @@
 
                                     <!-- Banderas con hidden 'false' antes -->
                                     <td class="text-center">
-                                        <!-- ✅ primero el checkbox (true) -->
+                                        <!--  primero el checkbox (true) -->
                                         <input class="form-check-input chk-ver" type="checkbox" @disabled
                                                name="Modulos[@i].Ver" value="true" @(m.Ver ? "checked" : "") />
-                                        <!-- ✅ luego el hidden (false) -->
+                                        <!-- luego el hidden (false) -->
                                         <input type="hidden" name="Modulos[@i].Ver" value="false" />
                                     </td>
 
