--- a/CreArte/Views/Shared/sidebar.cshtml
+++ b/CreArte/Views/Shared/sidebar.cshtml
@@ -81,7 +81,7 @@
             </a>
         }
 
-        <div class="sidebar-sep"></div>
+        @* <div class="sidebar-sep"></div> *@
 
         @if (Can("PRODUCTOS"))
         {
@@ -120,7 +120,7 @@
             </a>
         }
 
-        <div class="sidebar-sep"></div>
+        @* <div class="sidebar-sep"></div> *@
 
         @* Grupo Configuración (solo si hay al menos un subitem visible) *@
         @if (showConfig)
