--- a/CreArte/Views/Inventario/AjustePrecio.cshtml
+++ b/CreArte/Views/Inventario/AjustePrecio.cshtml
@@ -12,15 +12,15 @@
             <input class="form-control" value="@Model.PRODUCTO_ID" readonly />
         </div>
         <div class="col-md-6">
-            <label class="form-label">Costo actual</label>
+            <label class="form-label">Precio actual</label>
             <input class="form-control" value="@((Model.CostoActual ?? 0m).ToString("N2"))" readonly />
         </div>
     </div>
 
     <div class="mt-2">
-        <label asp-for="NuevoCostoUnitario" class="form-label"></label>
-        <input asp-for="NuevoCostoUnitario" class="form-control" />
-        <span asp-validation-for="NuevoCostoUnitario" class="text-danger"></span>
+        <label asp-for="NuevoPrecioUnitario" class="form-label"> Nuevo Precio Unitario</label>
+        <input asp-for="NuevoPrecioUnitario" class="form-control" />
+        <span asp-validation-for="NuevoPrecioUnitario" class="text-danger"></span>
     </div>
 
     <div class="mt-2">
