--- a/CreArte/Views/Inventario/Details.cshtml
+++ b/CreArte/Views/Inventario/Details.cshtml
@@ -18,8 +18,6 @@
         </div>
     </div>
 
-    <!-- (Opcional) Alerta si el stock está igual o por debajo del mínimo -->
-    @* Mantiene tu estética Bootstrap; si no lo quieres, borra este bloque *@
     @if (Model.STOCK_ACTUAL <= Model.STOCK_MINIMO)
     {
         <div class="alert alert-warning py-2">
@@ -83,7 +81,7 @@
                     <div class="fw-semibold">@Model.STOCK_MINIMO</div>
                 </div>
                 <div class="col-md-3">
-                    <div class="text-muted small">Costo unitario (Q)</div>
+                    <div class="text-muted small">Precio unitario (Q)</div>
                     <div class="fw-semibold">@Model.COSTO_UNITARIO.ToString("N2")</div>
                 </div>
 @*                 <div class="col-md-3">
@@ -92,16 +90,6 @@
                 </div> *@
             </div>
 
-            <!-- ===========================
-                 - Ver Kardex (producto)
-               =========================== -->
-@*             <div class="d-flex gap-2 mt-3">
-                <!-- ENTRADA -->
-                <a asp-action="AjusteEntrada"
-                   asp-route-productoId="@Model.PRODUCTO_ID"
-                   class="btn-AjEntrada">
-                    <i class="bi bi-plus-circle"></i> Ajuste Entrada
-                </a> *@
 
                 <div class="d-flex gap-2 mt-3">
                     <button type="button" class="btn-AjEntrada"
@@ -109,30 +97,21 @@
                         <i class="bi bi-plus-circle"></i> Ajuste Entrada
                     </button>
 
-                <!-- SALIDA -->
-              @*   <a asp-action="AjusteSalida"
-                   asp-route-productoId="@Model.PRODUCTO_ID"
-                   class="btn-AjSalida">
-                    <i class="bi bi-dash-circle"></i> Ajuste Salida
-                </a> *@
-
                 <button type="button" class="btn-AjSalida"
                         onclick="openFormModal('@Url.Action("AjusteSalida", "Inventario", new { productoId = Model.PRODUCTO_ID })', 'Ajuste de Salida')">
                     <i class="bi bi-dash-circle"></i> Ajuste Salida
                 </button>
 
-                <!-- AJUSTE PRECIO (no modifica stock) -->
-                <!-- Inventario/AjustePrecio?productoId=... -->
-                @* <a asp-action="AjustePrecio"
-                   asp-route-productoId="@Model.PRODUCTO_ID"
-                   class="btn-AjPrecio">
-                    <i class="bi bi-currency-dollar"></i> Ajuste Precio
-                </a> *@
-
                 <button type="button" class="btn-AjPrecio"
                         onclick="openFormModal('@Url.Action("AjustePrecio", "Inventario", new { productoId = Model.PRODUCTO_ID })', 'Ajuste de Precio')">
                     <i class="bi bi-cash"></i> Ajuste Precio
                 </button>
+
+                <button type="button" class="btn-StockProducto"
+                        onclick="openFormModal('@Url.Action("StockProducto", "Inventario", new { productoId = Model.PRODUCTO_ID })', 'Stock mínimo')">
+                    <i class="bi bi-graph-down"></i> Stock mínimo
+                </button>
+
 
                 <!-- Ver Kardex del producto -->
                 <a asp-controller="Kardex"
