--- a/CreArte/Views/Shared/_Layout.cshtml
+++ b/CreArte/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/css/tom-select.css">
 
     <!-- Bootstrap Icons (una sola vez) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
@@ -43,6 +44,7 @@
     @* 1) Bootstrap: DEBE ir antes que el sidebar (usa Collapse). 
        OJO: sin integrity/crossorigin para evitar el bloqueo SRI. *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
 
     @* 2) Librerías de terceros *@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
