--- a/CreArte/Views/_ViewImports.cshtml
+++ b/CreArte/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CreArte
 @using CreArte.Models
+@using Microsoft.AspNetCore.Http <!-- Habilita Session.GetString en la vista -->
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
