--- a/CreArte/wwwroot/css/Index.css
+++ b/CreArte/wwwroot/css/Index.css
@@ -587,3 +587,22 @@
     .btn-AjPrecio:hover {
         background: #FFEA00;
     }
+
+.btn-StockProducto {
+    background: #242259;
+    color: white;
+    border: none;
+    padding: 9px 10px;
+    border-radius: 10px;
+    font-weight: 400;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+}
+
+    .btn-StockProducto:hover {
+        background: #332973;
+    }
